--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,21 @@
 	<groupId>ch.shamu</groupId>
 	<artifactId>jsend-nrdp</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>jsend-nrdp</name>
-	<description>A client library to submit nagios check results (passive checks) using nrdp</description>
+	<description>A library to submit nagios check results (passive checks) using nrdp</description>
+	<url>http://github.com/m-ryan/jsend-nrdp</url>
+	<licenses></licenses>
+	<scm>
+		<url>http://github.com/m-ryan/jsend-nrdp.git</url>
+		<connection>scm:git:http://github.com/m-ryan/jsend-nrdp.git</connection>
+		<developerConnection>scm:git:http://github.com/m-ryan/jsend-nrdp.git</developerConnection>
+	</scm>
+	<developers>
+		<developer>
+			<name>Manuel Ryan</name>
+		</developer>
+	</developers>
 
 	<dependencies>
 
@@ -46,11 +59,47 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.apache.commons</groupId>
+			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>1.3.2</version>
 		</dependency>
 
 	</dependencies>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.2</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.9</version>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
