--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,13 @@
 	<name>jsend-nrdp</name>
 	<description>A library to submit nagios check results (passive checks) using nrdp</description>
 	<url>http://github.com/mryan43/jsend-nrdp</url>
-	<licenses />
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 	<scm>
 		<url>http://github.com/mryan43/jsend-nrdp.git</url>
 		<connection>scm:git:http://github.com/mryan43/jsend-nrdp.git</connection>
@@ -18,12 +24,6 @@
 			<name>Manuel Ryan</name>
 		</developer>
 	</developers>
-
-	<parent>
-		<groupId>org.sonatype.oss</groupId>
-		<artifactId>oss-parent</artifactId>
-		<version>7</version>
-	</parent>
 
 	<dependencies>
 
@@ -38,7 +38,7 @@
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.3.3</version>
+			<version>4.5.12</version>
 		</dependency>
 
 		<dependency>
@@ -50,7 +50,7 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>17.0</version>
+			<version>29.0-jre</version>
 		</dependency>
 
 		<!-- Test dependencies -->
@@ -58,14 +58,14 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
+			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-server</artifactId>
-			<version>9.2.0.M0</version>
+			<version>9.4.30.v20200611</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -132,6 +132,14 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
 				<version>2.2.2</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>8</source>
+					<target>8</target>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
